# EE4216

./: .gitignore  CMakeLists.txt  README.md  dependencies.lock.esp32_s3_eye  sdkconfig  sdkconfig.old
Arduino/: ESP32Final.ino
ESP32_s3_EYE/: sdkconfig.old
ESP32_s3_EYE/Testing/: receive_esp.py
ESP32_s3_EYE/components/who_app/who_recognition_app/: MyRecognitionApp.hpp  who_recognition_app_lcd.cpp
ESP32_s3_EYE/components/who_peripherals/who_lcd/: who_lvgl_lcd.cpp
ESP32_s3_EYE/components/who_recognition/: who_recognition.hpp
ESP32_s3_EYE/main/: CMakeLists.txt  credentials.c  credentials.h  http_streamer.c  http_streamer.h  net_sender.c  recognition_control.cpp  recognition_control.h  wifi_connect.h
ESP32_s3_door_lock/: ESP32Final.ino
components/who_app/who_recognition_app/: MyRecognitionApp.hpp  who_recognition_button.cpp
components/who_frame_lcd_disp/: CMakeLists.txt  telemetry_flags.c  telemetry_flags.h  who_frame_lcd_disp.cpp  who_frame_lcd_disp.hpp
components/who_peripherals/who_lcd/: who_lvgl_lcd.cpp  who_lvgl_lcd.hpp
components/who_peripherals/who_usb/: who_usb.cpp
components/who_recognition/: who_recognition.cpp
components/who_task/: who_task_state.cpp
main/: CMakeLists.txt  app_main.cpp  credentials.c  credentials.h  http_sender.c  http_streamer.c  http_streamer.h  idf_component.yml  mqtt5.c  mqtt5.h  mqtt_image_publish.cpp  net_sender.c  net_sender.h  publish_image.cpp  rgb565_downscale.c  rgb565_downscale.h  tcp_sender.c  telegram_sender.c  telemetry_flags.h  time_sync.c  time_sync.h  wifi_connect.c
report/: EE4216_Data_Analytics.ipynb
(+1 files in other folders)
